Transformed controller actor to be singleton inside cluster

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2551
+      port = 0
     }
   }
 
@@ -15,7 +15,8 @@ akka {
       "akka.tcp://ClusterSystem@127.0.0.1:2551",
       "akka.tcp://ClusterSystem@127.0.0.1:2552"]
 
-    auto-down-unreachable-after = 10s
+    auto-down-unreachable-after = 2s
   }
 }
 
+akka.cluster.failure-detector.threshold = 3
