--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,11 @@ akka {
     }
   }
 
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "INFO"
+
+
+
   cluster {
     seed-nodes = [
       "akka.tcp://ClusterSystem@127.0.0.1:2551",
